src/objects/CM_Specialty__c.object
<CustomObject>
    <description>Speciality</description>
    <fields>
        <fullName>CM_SP_Acc_Tax_Addr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Tax Address Identifier</description>
        <inlineHelpText>Account Tax Address Identifier</inlineHelpText>
        <label>Provider Tax Address Identifier</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipName>Specialties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_SP_Board_CD__c</fullName>
        <label>Board Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SP_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_SP_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_SP_Network__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network</label>
        <referenceTo>CM_Network__c</referenceTo>
        <relationshipLabel>Specialty</relationshipLabel>
        <relationshipName>Specialty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_SP_Prov_Type__c</fullName>
        <label>Provider Type Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SP_Provi_Type_CD__c</fullName>
        <label>Provider Type Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SP_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provider Lookup Relationship</description>
        <inlineHelpText>Provider</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Specialties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_SP_Specialty_CD__c</fullName>
        <label>Specialty Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SP_Specialty__c</fullName>
        <description>Specialty</description>
        <inlineHelpText>Specialty</inlineHelpText>
        <label>Specialty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SP_SubSpec_CD__c</fullName>
        <label>SubSpecialty Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Specialty_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if the specialty listed is the providers primary specialty.</description>
        <label>Primary Specialty Indicator</label>
        <type>Checkbox</type>
    </fields>
    <label>Specialty</label>
    <nameField>
        <displayFormat>SN-{0}</displayFormat>
        <label>Specialty Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>